# sve

./: CHANGELOG.md  sve.cabal
bench/: sve-bench.hs
src/: SVE.hs
tests/: sve-unit.hs
